--- a/RSPGame/rsp.css
+++ b/RSPGame/rsp.css
@@ -7,7 +7,7 @@
 .rsp-bg-container {
     background-color: red;
     background-size: cover;
-    height: 102vh;
+    height: 103vh;
 }
 
 .rsp-heading {
@@ -22,6 +22,7 @@
 .game-poster {
     height: 200px;
     width: 500px;
+    width: 100vw;
 }
 
 .pvsc {
@@ -41,11 +42,12 @@
     font-family: roboto;
     font-weight: bold;
     font-size: 25px;
+    order: 2;
 }
 
 .me {
     font-family: roboto;
-    color: rgb(68, 65, 65);
+    color: white;
     font-size: 8px;
     background-color: purple;
 }
