--- a/RSPGame/rsp.css
+++ b/RSPGame/rsp.css
@@ -51,3 +51,10 @@
     font-size: 8px;
     background-color: purple;
 }
+
+.vs {
+    font-family: Open Sans-Serif;
+    color: blue;
+    font-size: 24px;
+    font-weight: bold;
+}
